web-infras/parser/tests/fixtures/esprima/es2017/trailing-commas/invalid-sequence/output.txt
[SyntaxError]: sequence expression can not have trailing comma. (1,7)
1|(x,y,);
 |     ^
